--- a/Nbtce.Test/Nbtce.Test.csproj
+++ b/Nbtce.Test/Nbtce.Test.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiMethodParametersTests.cs" />
-    <Compile Include="GetUserInfoIntegrationTest.cs" />
+    <Compile Include="Private\GetUserInfoIntegrationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TradeHistorySerializationTests.cs" />
     <Compile Include="TransactionHistorySerializationTests.cs" />
