Added unit tests for enum->string and string->enum mapping

--- a/NBtce/NBtce.csproj
+++ b/NBtce/NBtce.csproj
@@ -46,6 +46,8 @@
     <Compile Include="ApiMethod.cs" />
     <Compile Include="ApiMethodParameters.cs" />
     <Compile Include="Attributes\ApiParameterAttribute.cs" />
+    <Compile Include="Converters\MissingJsonEnumValueAttributeException.cs" />
+    <Compile Include="DataStructures.cs" />
     <Compile Include="Mappers\EnumMapper.cs" />
     <Compile Include="NonceProvider.cs" />
     <Compile Include="UnixTime.cs" />
